compiler-core/src/fsharp/tests/snapshots/gleam_core__fsharp__tests__docs__deprecated_function.snap
---
source: compiler-core/src/fsharp/tests/docs.rs
assertion_line: 38
expression: "\n@deprecated(\"Use new_function instead\")\nfn other() {\n  Nil\n}\n\npub fn main() {\n  other()\n}\n"
---
module rec my.``mod``
[<System.Obsolete("Use new_function instead")>]
let private other (): unit = begin
    ()
end
let main (): unit = begin
    other()
end
