compiler-core/src/fsharp/tests/snapshots/gleam_core__fsharp__tests__docs__multi_line_doc_comment.snap
---
source: compiler-core/src/fsharp/tests/docs.rs
assertion_line: 21
expression: "\n/// This is a doc comment\n/// on multiple lines\nfn other() {\n  Nil\n}\n\npub fn main() {\n  other()\n}\n"
---
module rec my.``mod``
/// This is a doc comment
/// on multiple lines
let private other (): unit = begin
    ()
end
let main (): unit = begin
    other()
end
