compiler-core/src/fsharp/tests/snapshots/gleam_core__fsharp__tests__docs__single_line_doc_comment.snap
---
source: compiler-core/src/fsharp/tests/docs.rs
expression: "\n/// This is a doc comment\nfn other() {\n  Nil\n}\n\npub fn foo() {\n  other\n}\n"
---
module rec my.``mod``
/// This is a doc comment
let private other () = begin
    ()
end
let foo () = begin
    other
end
